WIP on table suppression
I want to be able to start an osquery without tables. This would let me load stored data from an extension.

--- a/tools/codegen/templates/default.cpp.in
+++ b/tools/codegen/templates/default.cpp.in
@@ -134,7 +134,12 @@ class {{table_name_cc}}TablePlugin : public TablePlugin {
 {% if attributes.utility %}
 REGISTER_INTERNAL({{table_name_cc}}TablePlugin, "table", "{{table_name}}");
 {% else %}
+// seph here
+//  if (SQLiteDBManager::isDisabled(name)) {
+//    VLOG(1) << "Table " << name << " is disabled, not attaching";
+//  } else {
 REGISTER({{table_name_cc}}TablePlugin, "table", "{{table_name}}");
+  //  }
 {% endif %}
 /// END[GENTABLE]
 
