--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -36,19 +36,20 @@ jobs:
 
       - name: Configure osquery
         run: cmake -DCMAKE_OSX_DEPLOYMENT_TARGET=10.11 -DCMAKE_BUILD_TYPE=${{ matrix.build.type }} -DOSQUERY_BUILD_TESTS=ON ${{ matrix.build.extra_cmake_args }} ..
-        workingDirectory: ${{ github.workspace }}/build
+        working-directory: ${{ github.workspace }}/build
+
       - name: Build osquery
         run: cmake --build . -j 3
-        workingDirectory: ${{ github.workspace }}/build
+        working-directory: ${{ github.workspace }}/build
 
       - name: "Run tests"
         run: ctest --build-nocmake -V
-        workingDirectory: ${{ github.workspace }}/build
+        working-directory: ${{ github.workspace }}/build
 
       - name: Run productbuild packaging
         run: --build . --target package -j 3
-        workingDirectory: ${{ github.workspace }}/build
+        working-directory: ${{ github.workspace }}/build
 
       - name: "Run TGZ packaging"
         run: cmake -DPACKAGING_SYSTEM=TGZ ../ && cmake --build . --target package -j 3
-        workingDirectory: ${{ github.workspace }}/build
+        working-directory: ${{ github.workspace }}/build
