--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -4,6 +4,9 @@ on:
   pull_request:
     branches: [ master ]
 
+env:
+  CCACHE_DIR: ccache
+
 jobs:
   build_macOS:
     runs-on: ${{ matrix.os }}
@@ -34,6 +37,16 @@ jobs:
       - name:  "Create build folder"
         run: mkdir ${{ github.workspace }}/build
 
+      - name: Submodule cache
+        uses: actions/cache@v2
+        with:
+          path: .git/modules
+          # FIXME: what was `$(SubmoduleCacheVersion)`
+          key: submodules-${{ runner.os }}-${{ hashFiles('.gitmodules') }}
+          restore-keys: |
+            submodules-${{ runner.os }}-
+            submodules-
+
       - name: Configure osquery
         run: cmake -DCMAKE_OSX_DEPLOYMENT_TARGET=10.11 -DCMAKE_BUILD_TYPE=${{ matrix.build.type }} -DOSQUERY_BUILD_TESTS=ON ${{ matrix.build.extra_cmake_args }} ..
         working-directory: ${{ github.workspace }}/build
@@ -41,6 +54,17 @@ jobs:
       - name: Build osquery
         run: cmake --build . -j 3
         working-directory: ${{ github.workspace }}/build
+
+      - name: ccache
+        uses: actions/cache@v2
+        with:
+          path: ${{ env.CCACHE_DIR }}
+          # FIXME: What was $(CacheVersion)
+          # FIXME: add $(Build.SourceVersion)
+          key: ccache-${{ runner.os }}-${{ matrix.build.type }}
+          restore-keys: |
+            ccache-${{ runner.os }}-
+            ccache-
 
       - name: "Run tests"
         run: ctest --build-nocmake -V
