--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,7 +12,7 @@ phases:
       - echo Build started on `date`
       - mkdir build
       - cd build
-      - cmake -DOSQUERY_TOOLCHAIN_SYSROOT=/usr/local/osquery-toolchain ..
+      - cmake -DOSQUERY_IGNORE_CMAKE_MAX_VERSION_CHECK=TRUE -DOSQUERY_TOOLCHAIN_SYSROOT=/usr/local/osquery-toolchain ..
       - make -j `nproc`
   post_build:
     commands:
