--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -335,6 +335,7 @@ jobs:
           -DCMAKE_BUILD_TYPE:STRING="${{ matrix.build_type }}" \
           -DOSQUERY_BUILD_TESTS=${{ steps.tests_build_settings.outputs.VALUE }} \
           -DOSQUERY_BUILD_ROOT_TESTS=${{ steps.tests_build_settings.outputs.VALUE }} \
+          -DOSQUERY_IGNORE_CMAKE_MAX_VERSION_CHECK=TRUE \
           "${{ steps.build_paths.outputs.SOURCE }}"
 
     - name: Build the project
