--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ name: build
 on:
   push:
     branches:
-      - '**'
+      - 'stefano/ci/add-msvc-compiler-version-to-cache-key'
 
     tags:
       - '*'
