Try to simplify trigger

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,13 +14,7 @@
 # builds on the x86 platform.
 name: build
 
-on:
-  push:
-    branches:
-      - 'stefano/ci/add-msvc-compiler-version-to-cache-key'
-
-    tags:
-      - '*'
+on: push
 
 # If the initial code sanity checks are passing, then one job
 # per [`platform` * `build_type`] will start, building osquery
