--- a/libraries/cmake/source/efivar/CMakeLists.txt
+++ b/libraries/cmake/source/efivar/CMakeLists.txt
@@ -51,12 +51,21 @@ function(efivarMain)
       ${CMAKE_DL_LIBS}
   )
 
+# FIXME: These includes are probablt overly broad:
+#  $ dpkg -L libefivar-dev | grep .h$
+#  /usr/include/efivar/efivar-dp.h
+#  /usr/include/efivar/efivar-guids.h
+#  /usr/include/efivar/efivar.h
+
+
   target_include_directories(thirdparty_efivar PRIVATE
+    "${library_root}/src/efivar.h"
     "${library_root}/src/include"
     "${generated_file_root}/headers"
   )
 
   target_include_directories(thirdparty_efivar SYSTEM INTERFACE
+    "${library_root}/src/efivar.h"
     "${library_root}/src/include"
     "${generated_file_root}/headers"
   )
