--- a/libraries/cmake/source/efivar/CMakeLists.txt
+++ b/libraries/cmake/source/efivar/CMakeLists.txt
@@ -57,6 +57,7 @@ function(efivarMain)
   )
 
   target_include_directories(thirdparty_efivar SYSTEM INTERFACE
+    "${library_root}/src/include"
     "${generated_file_root}/headers"
   )
 
