--- a/libraries/cmake/source/efivar/CMakeLists.txt
+++ b/libraries/cmake/source/efivar/CMakeLists.txt
@@ -57,7 +57,15 @@ function(efivarMain)
   )
 
   target_include_directories(thirdparty_efivar SYSTEM INTERFACE
+    "${generated_file_root}/headers"
+  )
+
+  target_include_directories(thirdparty_efivar PRIVATE
     "${library_root}/src/include"
+    "${generated_file_root}/headers"
+  )
+
+  target_include_directories(thirdparty_efivar SYSTEM INTERFACE
     "${generated_file_root}/headers"
   )
 
