--- a/specs/CMakeLists.txt
+++ b/specs/CMakeLists.txt
@@ -175,10 +175,11 @@ function(generateNativeTables)
     "linux/memory_map.table:linux"
     "linux/elf_dynamic.table:linux"
     "linux/elf_sections.table:linux"
-    "linux/selinux_settings.table:linux"
-    "linux/apparmor_profiles.table:linux"
     "linux/apparmor_events.table:linux"
+    "linux/apparmor_profiles.table:linux"
+    "linux/selinux_settings.table:linux"
     "linux/systemd_units.table:linux"
+    "linwin/efi_boot_order.table:linux,windows"
     "linwin/intel_me_info.table:linux,windows"
     "linwin/secureboot.table:linux,windows"
     "lldpd/lldp_neighbors.table:linux,macos,freebsd"
