--- a/libraries/cmake/source/efivar/CMakeLists.txt
+++ b/libraries/cmake/source/efivar/CMakeLists.txt
@@ -71,6 +71,7 @@ function(efivarMain)
 
   set(public_header_list
     "src/src/include/efivar/efivar.h"
+    "src/src/include/efivar/efiboot.h"
     "src/src/include/efivar/efivar-dp.h"
   )
 
